objects/Opportunity_Analytical_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Dead_Lost__c</fullName>
        <label>Date Dead-Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Declared_Dormant__c</fullName>
        <label>Date Declared Dormant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOI_Executed_Date__c</fullName>
        <label>LOI Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Sent_Date__c</fullName>
        <label>LOI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Type__c</fullName>
        <label>LOI Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Update_Time__c</fullName>
        <label>Next Steps Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>The Owner of the Opportunity</description>
        <label>Opportunity Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Sent_Date__c</fullName>
        <label>Term Sheet Sent Date</label>
        <type>Date</type>
    </fields>
    <label>Opportunity Analytical Report</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Opportunity Analytical Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Analytical Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>